<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wherewolf</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="needtoregister">Need an account?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_game_selection">GameSelection</string>
    <string name="ButtonSignOut">Sign Out</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="CreateGame">Create Game</string>
    <string name="title_activity_create_game">CreateGame</string>
    <string name="GameName">Game Name</string>
    <string name="GameDesc">Game Description</string>
    <string name="title_activity_game_lobby">GameLobby</string>
    <string name="StartGame">Start Game</string>
    <string name="sign_out">Sign Out</string>
    <string name="JoinGame">Join Game</string>
    <string name="LeaveGame">Leave Game</string>
    

</resources>
