<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wherewolfbg"
    tools:context="edu.utexas.chatila.wherewolf.activities.LoginActivity" >

<Button
    android:id="@+id/registerButton"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/loginButton"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/loginButton"
    android:layout_marginBottom="16dp"
    android:text="@string/register" />

<Button
    android:id="@+id/loginButton"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_above="@+id/needtoregister"
    android:layout_alignLeft="@+id/needtoregister"
    android:layout_alignRight="@+id/passwordText"
    android:layout_marginBottom="24dp"
    android:text="@string/login" />

<EditText
    android:id="@+id/passwordText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/usernameText"
    android:layout_alignRight="@+id/usernameText"
    android:layout_centerVertical="true"
    android:ems="35"
    android:hint="@string/password"
    android:inputType="textPassword" />

<EditText
    android:id="@+id/usernameText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/passwordText"
    android:ems="35"
    android:hint="@string/username" />

<TextView
    android:id="@+id/needtoregister"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/registerButton"
    android:layout_alignLeft="@+id/passwordText"
    android:text="@string/needtoregister"
    android:textColor="@android:color/white"
    android:textColorHint="@android:color/white" />

<TextView
    android:id="@+id/error_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/loginButton"
    android:layout_alignLeft="@+id/loginButton"
    android:layout_alignRight="@+id/passwordText"
    android:layout_below="@+id/passwordText"
    android:textColor="@android:color/white" />

</RelativeLayout>
