<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/purplebg"
    tools:context="edu.utexas.chatila.wherewolf.activities.CreateGame" >

<EditText
    android:id="@+id/gameDescription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/createGame"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="65dp"
    android:ems="35"
    android:hint="@string/GameDesc" >

    <requestFocus />
</EditText>

<EditText
    android:id="@+id/gameName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="23dp"
    android:ems="35"
    android:hint="@string/GameName" />

<Button
    android:id="@+id/createGame"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/gameNamet"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/gameNamet"
    android:layout_marginBottom="27dp"
    android:text="@string/CreateGame" />

<TextView
    android:id="@+id/error_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/gameDescription"
    android:layout_alignRight="@+id/gameDescription"
    android:layout_below="@+id/gameDescription"
    android:layout_marginTop="18dp"
    android:textColor="@android:color/white" />

</RelativeLayout>
